test whit image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="header__body">
             <h1 class="header__body__h1">Seeking how can get better day a day.<br>Developed JavaScript</h1>
-            <img class="header__body__img" src="" alt="">
+            <img class="header__body__img" src="./utils/images/WhatsApp Image 2020-04-17 at 19.12.52.jpeg" alt="">
         </div>
     </header>
     <section class="projects">
