--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./utils/css/style.css">
     <title>Enrique Rodríguez</title>
 </head>
@@ -25,12 +26,22 @@
             </ul>
         </div>
         <div class="header__body">
-            <h1 class="header__body__h1">Seeking how can get better day a day.<br>Developed JavaScript</h1>
-            <img class="header__body__img" src="./utils/images/WhatsApp Image 2020-04-17 at 19.12.52.jpeg" alt="">
+            <div class="container--header-body">
+                <h1 class="header__body__h1">Seeking how can<br>get better day a day.<br>Developed JavaScript</h1>
+            </div>
+            <div class="container--header-body">
+                <img class="header__body__img" src="./utils/images/foto-fondo.png" alt="">
+            </div>
         </div>
+        <figure>
+            <img src="https://img.icons8.com/nolan/64/sort-down--v1.png"/>
+        </figure>
     </header>
     <section class="projects">
 
     </section>
+    <footer>
+        <a href="https://icons8.com/icon/49477/clasificar-abajo">Icon by Icons8</a>
+    </footer>
 </body>
 </html> 
