jugando con el scroll

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./utils/css/style.css">
     <title>Enrique Rodríguez</title>
 </head>
-<body onkeyup="scrollKey()">
+<body id="body">
     <header class="header" id="header">
         <div class="header__top">
             <figure class="header__top__figure">
@@ -137,6 +137,6 @@
             </div>
         </div>
     </footer>
-    <script src="./assets/index.js"></script>
+    <script type="module" src="./assets/index.js"></script>
 </body>
 </html> 
