scroll casi a terminar, añadido scroll lateral

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Enrique Rodríguez</title>
 </head>
 <body id="body">
+    <nav class="nav">
+        <p class="nav--header">·<span> Header</span></p>
+        <p class="nav--projects">·<span> Projects</span></p>
+        <p class="nav--education">·<span> Education</span></p>
+        <p class="nav--contact">·<span> Contact</span></p>
+    </nav>
     <header class="header" id="header">
         <div class="header__top">
             <figure class="header__top__figure">
@@ -17,13 +23,13 @@
             </figure>       
             <ul class="header__top__nav">
                 <li class="header__top__nav__li">
-                    <a class="header__top__nav__li--projects" href="">Projects</a>
+                    <p class="header__top__nav__li--projects" id="navProjects">Projects</p>
                 </li>
                 <li class="header__top__nav__li">
-                    <a class="header__top__nav__li--about-me" href="">About me</a>
+                    <p class="header__top__nav__li--about-me" id="navEducation">About me</p>
                 </li>
                 <li class="header__top__nav__li">
-                    <a class="header__top__nav__li--contact" href="">Contact</a>
+                    <p class="header__top__nav__li--contact" id="navContact">Contact</p>
                 </li>
             </ul>
         </div>
