empezando con animaciones, 1 y 2 acabados pero deben mejorarse

--- a/index.html
+++ b/index.html
@@ -45,20 +45,21 @@
 
     <section class="projects" id="projects">
         <h1 class="projects--title">Projects</h1>
-        <article class="projects__one">
+        <article id="projectOne" class="projects__one">
             <div>
                 <h2 class="projects__one__h2">Spaceship VS</h2>
                 <figure class="projects__one__figure">
                     <img class="projects__one__figure__img" src="./utils/images/nave.png" alt="">
+                    <img id="lightning" class="projects__one__figure__img--two hidden" src="./utils/images/rayo.png" alt="">
                 </figure>
                 <h3 class="projects__one__h3"><span>It´s a little</span> game for two players <span>when you can destroy a your friend or... enemy</span></h3>
             </div>
         </article>
 
-        <article class="projects__two">
+        <article id="projectTwo" class="projects__two">
             <div>
                 <figure class="projects__two__figure">
-                    <img class="projects__two__figure__img" src="./utils/images/papel.png" alt="">
+                    <img id="paper" class="projects__two__figure__img" src="./utils/images/papel.png" alt="">
                 </figure>
                 <h2 class="projects__two__h2">Rock Paper Scissor</h2>
                 <h3 class="projects__two__h3">The typical game<span>, soon, rock, paper, scissor, lizard, spock 🖖</span></h3>
