--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
             </div>
         </article>
 
-        <article class="projects__three">
+        <article id="projectThree" class="projects__three">
             <div>
                 <h2 class="projects__two__h2">Character sheet D&D</h2>
                 <h3 class="projects__three__h3"><span>Esta vez en español, </span>hoja de personajes de D&D<span> ayudas para hacer tu personaje más rápido</span></h3>
                     <figure class="projects__three__figure">
-                        <img class="projects__three__figure__img" src="./utils/images/dragon.png" alt="">
+                        <img id="dyd" class="projects__three__figure__img" src="./utils/images/dragon.png" alt="">
+                        <img id="dydComplete" class="projects__three__figure__img--complete hidden" src="./utils/images/logodyd.png" alt="">
                     </figure>
             </div>
         </article>
 
-        <article class="projects__four">
+        <article id="projectFour" class="projects__four">
             <div class="project__four__div">
                 <h3 class="projects__four__h3"><span>Other </span>project to practice <span>what i have learned</span></h3>
                 <figure class="projects__four__figure">
-                    <img class="projects__four__figure__img" src="./utils/images/raiz.png" alt="">
+                    <img id="raiz" class="projects__four__figure__img" src="./utils/images/raiz.png" alt="">
+                    <img id="arbol" class="projects__four__figure__img hidden" src="./utils/images/arbol.png" alt="">
                 </figure>
                 <h2 class="projects__four__h2">Other Projects</h2>
             </div>
