--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header" id="header">
         <div class="header__top">
             <figure class="header__top__figure">
-                <img class="header__top__figure--logo" src="./utils/images/logo.png" alt="">
+                <img id="navHeader" class="header__top__figure--logo" src="./utils/images/logo.png" alt="">
             </figure>       
             <ul class="header__top__nav">
                 <li id="headNavProject" class="header__top__nav__li">
@@ -72,7 +72,7 @@
                 <h3 class="projects__three__h3"><span>Esta vez en español, </span>hoja de personajes de D&D<span> ayudas para hacer tu personaje más rápido</span></h3>
                     <figure class="projects__three__figure">
                         <img id="dyd" class="projects__three__figure__img" src="./utils/images/dragon.png" alt="">
-                        <img id="dydComplete" class="projects__three__figure__img--complete hidden" src="./utils/images/logodyd.png" alt="">
+                        <img id="dydComplete" class="projects__three__figure__img--complete" src="./utils/images/logodyd.png" alt="">
                     </figure>
             </div>
         </article>
@@ -82,7 +82,7 @@
                 <h3 class="projects__four__h3"><span>Other </span>project to practice <span>what i have learned</span></h3>
                 <figure class="projects__four__figure">
                     <img id="raiz" class="projects__four__figure__img" src="./utils/images/raiz.png" alt="">
-                    <img id="arbol" class="projects__four__figure__img hidden" src="./utils/images/arbol.png" alt="">
+                    <img id="arbol" class="projects__four__figure__img--complete" src="./utils/images/arbol.png" alt="">
                 </figure>
                 <h2 class="projects__four__h2">Other Projects</h2>
             </div>
@@ -150,7 +150,7 @@
                 <img src="https://pluspng.com/img-png/linkedin-png-256x256-px-linkedin-logo-png-download-256.png" alt="">
             </div>
             <div class="footer__contact--email">
-                <p>Want you work whit me? Send me a email</p>
+                <p>Want you work together? Send me a email</p>
                 <div class="footer__contact--email--send">
                     <input id="send" class="button" type="button" value="Send email">
                 </div>
