terminada portada, falta onload

--- a/index.html
+++ b/index.html
@@ -93,12 +93,30 @@
         <article class="education__code">
             <h1 class="education__code--title">Education</h1>
             <div class="education__code--program">
-                <p id="html">HTML</p>
-                <p id="css">Css</p>
-                <p id="javascript">Javascript</p>
-                <p id="dataBase">Data Base</p>
-                <p id="arduino">Arduino</p>
-                <p id="communication">Communication</p>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="html">HTML</p>
+                </div>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="css">Css</p>
+                </div>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="javascript">Javascript</p>
+                </div>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="dataBase">Data Base</p>
+                </div>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="arduino">Arduino</p>
+                </div>
+                <div class="container--education--code">
+                    <div></div>
+                    <p id="communication">Communication</p>
+                </div>    
             </div>
         </article>
         <article class="education__dev">
